<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/content_bg"
    >

    <LinearLayout
        android:id="@+id/text_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/qr_message_1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_show_qr"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/qr_message_2"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_show_qr"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="aaa"
            android:textSize="@dimen/text_show_qr"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/qr_message_3"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_show_qr"
            android:textStyle="bold"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/qrcode"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/text_show"
        android:contentDescription="@string/hello"
        android:src="@drawable/dialog_reprint_changed"/>

</RelativeLayout>